--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "start": "nodemon index.js",
+        "start": "nodemon index.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
@@ -20,6 +20,7 @@
         "express-handlebars": "^6.0.3",
         "express-session": "^1.17.2",
         "mongoose": "^6.3.2",
+        "nodemon": "^2.0.16",
         "passport": "^0.5.2",
         "passport-custom": "^1.1.1"
     }
