--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "mongoose": "^6.3.2",
         "nodemon": "^2.0.16",
         "passport": "^0.5.2",
-        "passport-custom": "^1.1.1"
+        "passport-custom": "^1.1.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6"
     }
 }
